--- a/TaskWorkFlow/TaskWorkFlow.csproj
+++ b/TaskWorkFlow/TaskWorkFlow.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="10.1.0" />
   </ItemGroup>
-
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\TaskWorkFlow.Application\TaskWorkFlow.Application.csproj" />
+    <ProjectReference Include="..\TaskWorkFlow.Infrastructure\TaskWorkFlow.Infrastructure.csproj" />
   </ItemGroup>
+
 
 </Project>
