ADD new usecase to get all the states by its number

--- a/TaskWorkFlow/appsettings.json
+++ b/TaskWorkFlow/appsettings.json
@@ -1,13 +1,12 @@
 {
-  {
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost;Database=TaskWorkFlowDb;Trusted_Connection=True;TrustServerCertificate=True"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=TaskWorkFlowDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
   "AllowedHosts": "*"
